Fixed alignment issues on main line. TODO: Add gap lines

--- a/src/components/Portfolio.scss
+++ b/src/components/Portfolio.scss
@@ -46,7 +46,6 @@
 .timeline-strip {
     margin: 0 auto;
     width: 10%;
-    margin-top: 15vw;
 }
 
 .timeline-card-img {
@@ -55,11 +54,19 @@
 
 .line {
     border-left: 6px solid #36454f;
-    height: 50vw;
+    height: 35vw;
     position: relative;
     left: 50%;
     margin-left: -3px;
-    top: -10vmin;
+    width: 100%;
+}
+
+.line-end {
+    border-left: transparent;
+    height: 35vw;
+    position: relative;
+    left: 50%;
+    margin-left: -3px;
     width: 100%;
 }
 
@@ -113,8 +120,28 @@
     .timeline-card-img {
         width: 679px;
     }
+    .timeline-strip {
+        margin: 0 auto;
+        width: 100px;
+    }
     .line {
-        height: 776px;
+        height: 696px;
+    }
+    .line-end {
+        height: 696px;
+    }
+    .line-element {
+        height: 80px;
+        width: 80px;
+    }
+    .line-element-inner {
+        height: 72px;
+        width: 72px;
+        margin-top: 4px;
+    }
+    .line-element-inner p {
+        font-size: 24px;
+        margin-top: 15px;
     }
 }
 
@@ -128,6 +155,12 @@
 }
 
 @media (max-width: 1024px) {
+    .line {
+        height: 264px;
+    }
+    .line-end {
+        height: 264px;
+    }
     .line-element {
         width: 50px;
         height: 50px;
